Fix form shadow on mobile

--- a/assets/css/_sass/modules/_form.scss
+++ b/assets/css/_sass/modules/_form.scss
@@ -49,6 +49,7 @@ label {
 }
 
 .form-control {
+	-webkit-appearance: none;
 	background-color: var(--bg-secondary);
 	border: 1px solid var(--border-primary);
 	border-radius: 4px;
